Fixed issue with positioning and setting the width of the dropdown on decimal numbers - changed the positioning of the dropdown to be 'absolute' - calculating 'top' and 'left' relative to the host element

--- a/src/select-dropdown.component.scss
+++ b/src/select-dropdown.component.scss
@@ -12,7 +12,7 @@ select-dropdown {
         border: 1px solid #ccc;
         border-top: none;
         box-sizing: border-box;
-        position: fixed;
+        position: absolute;
         z-index: 1;
 
         .filter {
